<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_page"
    tools:context=".PasswordPage">


    <!-- Text info -->
    <TextView
        android:id="@+id/textViewAccessCode"
        android:layout_width="93dp"
        android:layout_height="19dp"
        android:layout_marginTop="128dp"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/AccessCode"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold|normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewForgetPassword"
        android:layout_width="118dp"
        android:layout_height="19dp"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/forget_password"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2"
        app:layout_constraintVertical_bias="0.818" />



    <!-- Enter pin -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|bottom"
            app:layout_constraintBottom_toBottomOf="@+id/tableLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingBottom="530dp"
            android:orientation="horizontal">

            <View
                android:id="@+id/view_01"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:background="@drawable/bg_oval_gray" />

            <View
                android:id="@+id/view_02"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginLeft="10sp"
                android:background="@drawable/bg_oval_gray" />

            <View
                android:id="@+id/view_03"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginLeft="10sp"
                android:background="@drawable/bg_oval_gray" />

            <View
                android:id="@+id/view_04"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginLeft="10sp"
                android:background="@drawable/bg_oval_gray" />
        </LinearLayout>

    </LinearLayout>


    <!-- Buttons for inpute pin-->
    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="221dp"
        android:layout_height="313dp"
        android:layout_marginTop="84dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAccessCode"
        app:layout_constraintVertical_bias="0.09">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button1"
                android:layout_width="61dp"
                android:layout_height="61dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/ellipse"
                android:fontFamily="@font/roboto_thin"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:theme="@style/White"
                tools:ignore="MissingConstraints"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button2"
                android:fontFamily="@font/roboto_thin"
                android:layout_width="61dp"
                android:layout_height="61dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/ellipse"
                android:text="@string/_2"
                android:textColor="@color/white"
                android:theme="@style/White"
                android:textSize="16sp"
                tools:ignore="MissingConstraints"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button3"
                android:fontFamily="@font/roboto_thin"
                android:layout_width="61dp"
                android:layout_height="61dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/ellipse"
                android:text="@string/_3"
                android:textColor="@color/white"
                android:theme="@style/White"
                android:textSize="16sp"
                tools:ignore="MissingConstraints"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints"
                style="?android:attr/buttonBarButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button4"
                android:layout_width="61dp"
                android:layout_height="61dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/ellipse"
                android:fontFamily="@font/roboto_thin"
                android:text="@string/_4"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:theme="@style/White"
                tools:ignore="MissingConstraints"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button5"
                android:layout_width="61dp"
                android:layout_height="61dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/ellipse"
                android:fontFamily="@font/roboto_thin"
                android:text="@string/_5"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:theme="@style/White"
                tools:ignore="MissingConstraints"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button6"
                android:fontFamily="@font/roboto_thin"
                android:layout_width="61dp"
                android:layout_height="61dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/ellipse"
                android:text="@string/_6"
                android:textColor="@color/white"
                android:theme="@style/White"
                android:textSize="16sp"
                tools:ignore="MissingConstraints"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints"
                style="?android:attr/buttonBarButtonStyle" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button7"
                android:layout_width="61dp"
                android:layout_height="61dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/ellipse"
                android:fontFamily="@font/roboto_thin"
                android:text="@string/_7"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:theme="@style/White"
                tools:ignore="MissingConstraints"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button8"
                android:layout_width="61dp"
                android:layout_height="61dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/ellipse"
                android:fontFamily="@font/roboto_thin"
                android:text="@string/_8"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:theme="@style/White"
                tools:ignore="MissingConstraints"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button9"
                android:fontFamily="@font/roboto_thin"
                android:layout_width="61dp"
                android:layout_height="61dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/ellipse"
                android:text="@string/_9"
                android:textColor="@color/white"
                android:theme="@style/White"
                android:textSize="16sp"
                tools:ignore="MissingConstraints"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints"
                style="?android:attr/buttonBarButtonStyle" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="58dp">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="65dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/todo"/>

            <Button
                android:id="@+id/button10"
                android:fontFamily="@font/roboto_thin"
                android:layout_width="61dp"
                android:layout_height="61dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/ellipse"
                android:text="@string/_10"
                android:textColor="@color/white"
                android:theme="@style/White"
                android:textSize="16sp"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/buttonbackspace"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="26dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="36dp"
                android:background="@drawable/backspace"
                android:theme="@style/White"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/button18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints" />

        </TableRow>

    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>